--- a/components/top-bar.html
+++ b/components/top-bar.html
@@ -13,7 +13,7 @@
             <div class="top-bar-left">
                 <div class="unified-selector dropdown">
                     <div class="d-flex align-items-center gap-2">
-                        <img src="../assets/images/news/indian-flag.png" alt="India" width="20" height="14">
+                        <img src="../assets/images/news/indian-flag.webp" alt="India" width="20" height="14">
                         <span>IN - ENGLISH</span>
                     </div>
                 </div>
